--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ jdk:
   - oraclejdk8
   - oraclejdk7
 
+env:
+  - DOCKER_HOST=tcp://127.0.0.1:2375
+  - DOCKER_HOST=unix:///var/run/docker.sock
+
 before_install:
   - docker version
   - docker info
